老师评价页面的界面逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -919,7 +919,8 @@
 					"html/homework/workdetailTea-temporary.html",
 					"html/homework/homework-record.html",
 					"html/homework/homework-commented.html",
-					"html/homework/workstu-err.html"
+					"html/homework/workstu-err.html",
+					"html/homework/doHomework-stu.html"
 				],
 				"priority": 0
 			},
@@ -2110,7 +2111,14 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/myStorage/myStorage.js"
+					"js/libs/myStorage/myStorage.js",
+					"css/cloud/file.css",
+					"css/utils/common.css",
+					"js/cloud/cloud.js",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/mui.min.js",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -2239,7 +2247,26 @@
 			"html/homework/homework-comment.html": {
 				"resources": [
 					"css/homework/homework-commit.css",
-					"js/homework/homework-comment.js"
+					"js/homework/homework-comment.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/publicHomeworkProtocol.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
