--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -764,7 +764,8 @@
 					"html/cloud/storage_main.html",
 					"html/cloud/storage_upload.html",
 					"html/cloud/app_notes_main.html",
-					"html/cloud/record_student_main.html"
+					"html/cloud/record_student_main.html",
+					"html/cloud/storage_upload_choose.html"
 				],
 				"priority": 0
 			},
