--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -912,7 +912,8 @@
 					"image/homework/need-submit.png",
 					"image/homework/submitted.png",
 					"css/homework/subjects-icon.css",
-					"image/homework/no-comment.png"
+					"image/homework/no-comment.png",
+					"image/homework/commented.png"
 				],
 				"refer": [
 					"html/homework/workdetail-tea.html",
