--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1369,7 +1369,8 @@
 					"js/quan/about-me.js",
 					"js/utils/events.js",
 					"fonts/mui.ttf",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"js/publicHomeworkProtocol.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2298,6 +2299,14 @@
 			"html/cloud/record_student_sub.html": {
 				"resources": [
 					"js/quan/studentdynamic.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/storage_upload_choose.html": {
+				"resources": [
+					"image/cloud/A_folder.png",
+					"js/cloud/AndroidFileSystem.js"
 				],
 				"refer": [],
 				"priority": 0
