--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2311,7 +2311,9 @@
 			"html/cloud/storage_upload_choose.html": {
 				"resources": [
 					"image/cloud/A_folder.png",
-					"js/cloud/AndroidFileSystem.js"
+					"js/cloud/AndroidFileSystem.js",
+					"fonts/mui.ttf",
+					"css/cloud/file.css"
 				],
 				"refer": [],
 				"priority": 0
