乱七八糟改

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 *.apk
 JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 JiaoBaoYun-hb/unpackage/.confirmed_dependencies
+JiaoBaoYun-hb/manifest.json
