发布班级动态，关闭拍照按钮

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -446,7 +446,8 @@
 					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [
-					"html/quan/leave.html"
+					"html/quan/leave.html",
+					"html/quan/pub-dynamic.html"
 				],
 				"priority": 0
 			},
