--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2241,7 +2241,9 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/publicHomeworkProtocol.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/homework/pic-detail.html"
+				],
 				"priority": 0
 			},
 			"html/homework/workdetailTea-temSub.html": {
@@ -2339,6 +2341,27 @@
 			"html/quan/pub-leave.html": {
 				"resources": [
 					"css/mui.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/pic-detail.html": {
+				"resources": [
+					"js/publicProtocol.js",
+					"js/mui.min.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/Barrett.js",
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/jquery.js",
+					"fonts/mui.ttf",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
