不需在线提交的作业显示方式

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2239,7 +2239,8 @@
 					"js/utils/RSAEncrypt.js",
 					"js/libs/myStorage/myStorage.js",
 					"js/libs/crypto-js/crypto-js.js",
-					"js/publicHomeworkProtocol.js"
+					"js/publicHomeworkProtocol.js",
+					"css/homework/subjects-icon.css"
 				],
 				"refer": [
 					"html/homework/pic-detail.html"
