与我相关头像，删除群主的老师身份

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1494,7 +1494,25 @@
 					"js/qiniu/plupload.full.min.js",
 					"js/utils/QiNiuUtil.js",
 					"js/qiniu/qiniu.js",
-					"js/utils/UploadHeadImage.js"
+					"js/utils/UploadHeadImage.js",
+					"js/utils/CloudFileUtil.js",
+					"js/cloud/AndroidFileSystem.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1636,7 +1654,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
