--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -477,7 +477,8 @@
 					"css/icons-extra.css",
 					"fonts/mui-icons-extra.ttf",
 					"image/cloud/record_addclassclose.png",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"js/utils/native.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -878,7 +879,8 @@
 				],
 				"refer": [
 					"html/index.html",
-					"html/register/modify_password.html"
+					"html/register/modify_password.html",
+					"html/index/index.html"
 				],
 				"priority": 0
 			},
