--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1339,7 +1339,8 @@
 					"image/cloud/record_history.gif",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"image/cloud/record_link.gif"
+					"image/cloud/record_link.gif",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -1453,7 +1454,8 @@
 					"js/libs/myStorage/myStorage.js",
 					"js/storageKeyName.js",
 					"js/cloud/cloud.js",
-					"js/utils/CloudFileUtil.js"
+					"js/utils/CloudFileUtil.js",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
