0004325: 与我相关点击头像进入个人空间

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1392,7 +1392,9 @@
 					"js/publicHomeworkProtocol.js",
 					"js/utils/native.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/zone_main.html"
+				],
 				"priority": 0
 			},
 			"html/quan/leave.html": {
