--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1125,7 +1125,8 @@
 					"js/utils/files.js",
 					"image/homework/xiangji.png",
 					"image/homework/temWork-teaHint.png",
-					"image/homework/temWork-stuHint.png"
+					"image/homework/temWork-stuHint.png",
+					"css/utils/preview.css"
 				],
 				"refer": [
 					"html/homework/homework-commented.html"
@@ -1464,7 +1465,9 @@
 					"js/cloud/cloud.js",
 					"js/utils/CloudFileUtil.js",
 					"js/libs/crypto-js/crypto-js.js",
-					"image/cloud/A_folder.png"
+					"image/cloud/A_folder.png",
+					"js/mui.lazyload.js",
+					"js/mui.lazyload.img.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2098,7 +2101,9 @@
 			"html/homework/workdetail-tea.html": {
 				"resources": [
 					"html/homework/workdetail-tea-sub.html",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -2342,7 +2347,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/mui.previewimage.js",
-					"js/mui.zoom.js"
+					"js/mui.zoom.js",
+					"css/utils/preview.css"
 				],
 				"refer": [],
 				"priority": 0
