0003794: 申请加入群 无法使用除软件盘以外的方式搜索

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1822,7 +1822,8 @@
 					"css/mui.min.css",
 					"image/utils/default_personalimage.png",
 					"css/mine/apply.css",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"html/mine/apply-group.html"
 				],
 				"refer": [],
 				"priority": 0
