--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -163,9 +163,9 @@
 			"splashscreen": {
 				"ios": {
 					"iphone": {
-						"default": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/ios_320-480.png", /*iPhone3启动图片选，分辨率：320x480*/
-						"retina35": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/ios_640-960.png",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
-						"retina40": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/ios_640-1136.png","retina55":"/Users/a111/Downloads/教宝云启动页/教宝云启动页/ios_1242-2208.png","retina47":"/Users/a111/Downloads/教宝云启动页/教宝云启动页/ios_750-1334.png"
+						 /*iPhone3启动图片选，分辨率：320x480*/
+						/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
+						
 					},
 					"ipad": {
 						"portrait": "", /*iPad竖屏启动图片，分辨率：768x1004*/
@@ -179,11 +179,11 @@
 					}
 				},
 				"android": {
-					"mdpi": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/Android_240-280.png", /*普通屏启动图片，分辨率：240x282*/
-					"ldpi": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/Android_320-442.png", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/Android_480-762.png", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/Android_720-1242.png", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": "/Users/a111/Downloads/教宝云启动页/教宝云启动页/Android_1080-1882.png"
+					 /*普通屏启动图片，分辨率：240x282*/
+					 /*大屏启动图片，分辨率：320x442*/
+					 /*高分屏启动图片，分辨率：480x762*/
+					 /*720P高分屏启动图片，分辨率：720x1242*/
+					
 				}
 			}
 		}
@@ -1415,7 +1415,8 @@
 				"resources": [
 					"js/quan/aboutme.js",
 					"image/quan/leave-bg.png",
-					"image/dynamic/u101.png"
+					"image/dynamic/u101.png",
+					"css/quan/about-me.css"
 				],
 				"refer": [],
 				"priority": 0
