--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -771,7 +771,8 @@
 					"image/cloud/cloud_0_wenjianjia.png",
 					"image/cloud/cloud_0_tongxunlu.png",
 					"image/cloud/cloud_0_zuoye.png",
-					"image/cloud/cloud_0_xinjian.png"
+					"image/cloud/cloud_0_xinjian.png",
+					"image/quan/add.png"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -2541,7 +2542,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
