--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2544,7 +2544,12 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"image/dynamic/icon_praise_small.png",
+					"js/utils/native.js",
+					"js/quan/dynamiclistitem.js",
+					"fonts/iconfont.ttf",
+					"css/icons-extra.css"
 				],
 				"refer": [],
 				"priority": 0
