--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2550,7 +2550,10 @@
 					"js/quan/dynamiclistitem.js",
 					"fonts/iconfont.ttf",
 					"css/icons-extra.css",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"js/utils/slide-selector.js",
+					"css/utils/common.css",
+					"css/iconfont/iconfont.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -2603,7 +2606,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/senedu/SenEduHomeItem.js"
 				],
 				"refer": [],
 				"priority": 0
