--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2454,7 +2454,20 @@
 					"html/qiuzhi/qiuzhi-sub.html",
 					"css/qiuzhi/qiuzhi.css",
 					"js/utils/events.js",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/qiuzhi/qiuzhi-home.js",
+					"js/publicQiuzhiProtocol.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2472,10 +2485,22 @@
 					"fonts/iconfont.ttf",
 					"js/storageKeyName.js",
 					"js/publicQiuzhiProtocol.js",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [
-					"html/qiuzhi/qiuzhi-question.html"
+					"html/qiuzhi/qiuzhi-question.html",
+					"html/qiuzhi/qiuzhi-questionSub.html",
+					"html/qiuzhi/qiuzhi-answerDetail.html"
 				],
 				"priority": 0
 			},
@@ -2501,7 +2526,8 @@
 					"js/mui.min.js",
 					"js/utils/events.js",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -2553,7 +2579,8 @@
 					"image/utils/default_personalimage.png",
 					"js/utils/slide-selector.js",
 					"css/utils/common.css",
-					"css/iconfont/iconfont.css"
+					"css/iconfont/iconfont.css",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2631,6 +2658,13 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/qiuzhi/qiuzhi-answerDetail.html": {
+				"resources": [
+					"html/qiuzhi/qiuzhi-answerDetailSub.html"
 				],
 				"refer": [],
 				"priority": 0
