标题栏显示样式

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -782,7 +782,8 @@
 					"html/cloud/storage_upload.html",
 					"html/cloud/app_notes_main.html",
 					"html/cloud/record_student_main.html",
-					"html/cloud/storage_upload_choose.html"
+					"html/cloud/storage_upload_choose.html",
+					"html/quan/parentZone.html"
 				],
 				"priority": 0
 			},
@@ -2620,7 +2621,9 @@
 					"js/utils/slide-selector.js",
 					"html/scienceeducation/senedu-sub.html"
 				],
-				"refer": [],
+				"refer": [
+					"html/utils/customizeCity.html"
+				],
 				"priority": 0
 			},
 			"html/scienceeducation/senedu-sub.html": {
@@ -2640,7 +2643,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/senedu/SenEduHomeItem.js"
+					"js/senedu/SenEduHomeItem.js",
+					"js/utils/h5fresh.js"
 				],
 				"refer": [
 					"html/scienceeducation/senedu_show_main.html"
@@ -2719,6 +2723,20 @@
 				"resources": [
 					"js/utils/ASFiles.js",
 					"css/quan/class_space.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/parentZone-sub.html": {
+				"resources": [
+					"css/home/zone.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/parentZone.html": {
+				"resources": [
+					"html/quan/parentZone-sub.html"
 				],
 				"refer": [],
 				"priority": 0
