--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2500,7 +2500,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"image/qiuzhi/channel-edu.png",
-					"image/qiuzhi/channel-health.png"
+					"image/qiuzhi/channel-health.png",
+					"image/qiuzhi/channel-food.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-question.html",
@@ -2550,7 +2551,8 @@
 					"css/mui.min.css",
 					"js/main/slide_navigation.js",
 					"js/utils/slide-selector.js",
-					"html/show/show-sub.html"
+					"html/show/show-sub.html",
+					"js/storageKeyName.js"
 				],
 				"refer": [
 					"html/show/show-sub1.html",
@@ -2644,7 +2646,9 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/senedu/SenEduHomeItem.js",
-					"js/utils/h5fresh.js"
+					"js/utils/h5fresh.js",
+					"css/utils/common.css",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [
 					"html/scienceeducation/senedu_show_main.html"
