版本更新。打完收工

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 JiaoBaoYun-hb/manifest.json
+JiaoBaoYun-hb/unpackage/release/H56171390.wgt
